--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,71 +1,127 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
-
-
+/* Definições de tipografia */
 body {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
+    font-family: 'Ubuntu', sans-serif; /* Define a fonte padrão para o corpo */
+    color: #333333; /* Cor padrão do texto */
 }
 
 h1 {
-    font-weight: 700; /* Peso da fonte 'bold' */
-    font-size: 2.5em; /* Tamanho do título */
-    line-height: 1.2; /* Espaçamento entre as linhas */
-    margin-bottom: 20px; /* Espaçamento abaixo do título */
+    font-size: 2.5rem !important; /* Tamanho maior para H1 */
+    font-weight: bold !important; /* Peso da fonte mais grosso */
+    color: #0c5460 !important; /* Dark Teal */
+    margin: 1.5rem 0; /* Margem para separação */
 }
 
 h2 {
-    font-weight: 700; /* Peso da fonte 'bold' */
-    font-size: 2em; /* Tamanho do título */
-    line-height: 1.3; /* Espaçamento entre as linhas */
-    margin-bottom: 15px; /* Espaçamento abaixo do título */
+    font-size: 2rem !important; /* Tamanho menor que H1 */
+    font-weight: 600 !important; /* Peso da fonte semi-grosso */
+    margin: 1.25rem 0; /* Margem para separação */
 }
 
 h3 {
-    font-weight: 700; /* Peso da fonte 'bold' */
-    font-size: 1.8em; /* Tamanho do título */
-    line-height: 1.4; /* Espaçamento entre as linhas */
-    margin-bottom: 15px; /* Espaçamento abaixo do título */
+    font-size: 1.75rem !important; /* Menor que H2 */
+    font-weight: normal !important; /* Peso normal para H3 */
+    color: #66bb7f !important; /* Mint Green */
+    margin: 1rem 0; /* Margem para separação */
 }
 
 h4 {
-    font-weight: 500; /* Peso da fonte 'medium' */
-    font-size: 1.5em; /* Tamanho do título */
-    line-height: 1.4; /* Espaçamento entre as linhas */
-    margin-bottom: 15px; /* Espaçamento abaixo do título */
+    font-size: 1.5rem !important; /* Menor que H3 */
+    font-weight: lighter !important; /* Peso leve para H4 */
+    margin: 0.75rem 0; /* Margem para separação */
 }
 
-h5 {
-    font-weight: 500; /* Peso da fonte 'medium' */
-    font-size: 1.2em; /* Tamanho do título */
-    line-height: 1.4; /* Espaçamento entre as linhas */
-    margin-bottom: 15px; /* Espaçamento abaixo do título */
-}
-
-h6 {
-    font-weight: 500; /* Peso da fonte 'medium' */
-    font-size: 1em; /* Tamanho do título */
-    line-height: 1.4; /* Espaçamento entre as linhas */
-    margin-bottom: 15px; /* Espaçamento abaixo do título */
-}
-
-/* Exemplo de estilização para outros elementos */
 p {
-    font-weight: 400; /* Peso da fonte 'normal' */
-    font-size: 1em; /* Tamanho do parágrafo */
-    margin-bottom: 20px; /* Espaçamento abaixo do parágrafo */
+    font-size: 1rem; /* Tamanho padrão para parágrafos */
+    margin: 0.5rem 0; /* Margem para separação */
 }
 
-/* Estilização para links */
 a {
-    color: #007bff; /* Cor dos links */
-    text-decoration: none; /* Remover sublinhado padrão dos links */
+    color: #0c5460; /* Cor do link */
+    text-decoration: underline; /* Sublinhado para links */
 }
 
 a:hover {
-    text-decoration: underline; /* Sublinhar ao passar o mouse */
+    color: #66bb7f; /* Cor do link ao passar o mouse */
+    text-decoration: none; /* Remove sublinhado ao passar o mouse */
 }
 
+.alert {
+    margin: 1rem 0; /* Margem para alertas */
+}
 
+.btn-primary {
+  background-color: #0c5460;
+}
+.quarto-title-banner {
+    margin-bottom: 1em;
+    color: rgba(255, 255, 255, .8);
+    background: #74c18c;
+}
+.navbar {
+    background-color: #0c5460;
+    color: rgba(255, 255, 255, .8);
+}
+.quarto-title .quarto-categories .quarto-category a {
+    color: #0c5460;
+}
+.quarto-title .quarto-categories .quarto-category {
+    padding: .25em .75em;
+    font-size: .65em;
+    text-transform: uppercase;
+    border: solid 1px #0c5460;
+    border-radius: .25rem;
+    opacity: .6;
+}
+#logo-site {
+  box-shadow: none; /* Remove a sombra da logo */
+}
+.navbar {
+    background-color: #0c5460;
+    color: rgba(255, 255, 255, .8);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9) !important;
+}
+.quarto-grid-item.card-left {
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) !important;
+    border-radius: 5px;
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7) !important;
+}
+footer.footer .nav-footer, #quarto-header>nav {
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: #0c5460;
+}
+.footer {
+  color: #cedddf; /* Define a cor do texto do footer */
+}
+.footer a {
+  color: #cedddf; /* Define a cor dos links do footer */
+}
+.nav-footer-left p {
+  color: #cedddf !important; /* Força a cor para o texto dentro de .nav-footer-left */
+}
+body {
+    font-family: 'Ubuntu', sans-serif;
+    color: #333333; /* Cor padrão do texto */
+}
 
+h1, h2, h3, h4, p {
+    color: #0c5460; /* Cor padrão para os textos */
+}
+
+a {
+    color: #0c5460; /* Cor do link */
+}
+
+/* Estilos para o tema darkly */
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+    color: #333333; /* Cor padrão do texto para o tema united */
+}
 
